--- a/integrations/network.yaml
+++ b/integrations/network.yaml
@@ -1,5 +1,5 @@
 #####
-# Network integration, enaled by default (part of default_config)
+# Network integration, enabled by default (part of default_config)
 # https://www.home-assistant.io/integrations/network
 #####
 
